docs/contributor/pocs/otelcol-downtime/go-otel-sdk-retries.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: trace-sink
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-sink
  namespace: trace-sink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-sink
  strategy: {}
  template:
    metadata:
      labels:
        app: trace-sink
    spec:
      volumes:
      - name: config
        configMap:
          name: trace-sink-config
      securityContext:
        fsGroup: 101
      containers:
      - image: otel/opentelemetry-collector-contrib:latest
        name: collector
        volumeMounts:
        - name: config
          mountPath: /etc/collector
        args:
        - --config=/etc/collector/config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trace-sink
  namespace: trace-sink
spec:
  ports:
  - name: grpc-otlp
    port: 4317
    protocol: TCP
    targetPort: 4317
  - name: http-otlp
    port: 4318
    protocol: TCP
    targetPort: 4318
  selector:
    app: trace-sink
---
apiVersion: v1
kind: Namespace
metadata:
  name: trace-gen
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-gen
  namespace: trace-gen
  labels:
    app: trace-gen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-gen
  template:
    metadata:
      labels:
        app: trace-gen
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: sample-app
          image: europe-docker.pkg.dev/kyma-project/prod/samples/telemetry-sample-app:latest 
          imagePullPolicy: Always
          resources:
            limits:
              memory: 100Mi
            requests:
              memory: 32Mi
          ports:
            - name: http
              containerPort: 8080
