docs/contributor/pocs/otelcol-downtime/telemetrygen_otlphttp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: telemetry-otlp-traces
  namespace: kyma-system
spec:
  ports:
  - name: grpc-collector
    port: 4317
    protocol: TCP
    targetPort: 4317
  - name: http-collector
    port: 4318
    protocol: TCP
    targetPort: 4318
  selector:
    app.kubernetes.io/name: telemetry-trace-gateway
  type: ClusterIP
---
apiVersion: v1
kind: Namespace
metadata:
  name: trace-gen
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-gen
  namespace: trace-gen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-gen
  strategy: {}
  template:
    metadata:
      labels:
        app: trace-gen
    spec:
      containers:
      - command:
        - /telemetrygen
        - traces
        - --otlp-endpoint
        - telemetry-otlp-traces.kyma-system:4318
        - --otlp-insecure
        - --otlp-http
        - --duration
        - 1h
        - --rate
        - "10"
        image: ghcr.io/open-telemetry/opentelemetry-collector-contrib/telemetrygen:latest
        name: telemetrygen
