docs/contributor/pocs/otelcol-downtime/vs-trace-gateway-fault-404.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: telemetry-otlp-traces-fault
  namespace: kyma-system
spec:
  hosts:
    - telemetry-otlp-traces.kyma-system.svc.cluster.local
  http:
    - fault:
        abort:
          httpStatus: 404
          percentage:
            value: 100
      route:
        - destination:
            host: telemetry-otlp-traces.kyma-system.svc.cluster.local
